<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Strings -->
    <string name="app_name">ASRWithIntent</string>
	<string name="radiobutton_web">Web search</string>
	<string name="radiobutton_free">Free form</string>
	<string name="instructions_langmodel">Choose a language model</string>
	<string name="instructions_numresults">Choose the maximum number of results</string>
	<string name="speechbtn">Pulsa el botón para hablar</string>
</resources>