<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="5dp" >


    <Button
        android:id="@+id/speech_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speechbtn"
        android:layout_gravity="center_horizontal"
        android:enabled="true" />

    <ListView
        android:id="@+id/nbest_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txtAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="Heading: 0.0" />

        <ImageView
            android:id="@+id/imgViewCompass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAngle"
            android:layout_centerHorizontal="true"
            android:src="@drawable/flecha" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
                android:id="@+id/instructions_langmodel_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_langmodel"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/langModel_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/langModelFree_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_free"
                android:checked="true" />

            <RadioButton
                android:id="@+id/langModelWeb_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_web" />
        </RadioGroup>

        <TextView
                android:id="@+id/instructions_numResults_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_numresults"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/numResults_editText"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible">

           <requestFocus />
           </EditText>
    </LinearLayout>

</LinearLayout>